# python_poetry_template

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pylint.yml  ubuntu.yml
libtemp/: common.py  math.py
src/libtemp/: common.py  entrypoint.py
tests/: test_common.py  test_math.py
