[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_template_project"
version = "0.0.1"
description = "A template for creating standalone python projects with a basic, but modern toolchain"
authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
readme = "README.md"
packages = [{include = "libtemp", from="src"}]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"

arrow = "^1.3.0"
click = "^8.1.7"
loguru = "^0.7.2"
msgpack = "^1.1.0"
numpy = "^2.2.0"
plotly = "^5.24.1"
polars = "^1.17.1"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
ruff = "^0.6.4"

[tool.poetry.scripts]
main_script = "libtemp.entrypoint:main"
